# CMakeList.txt : CMake project for ListLinkOne, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
project ("SinglyLinkedList")
add_executable (ListLinkOne "ListLinkOne.cpp")

# TODO: Add tests and install targets if needed.
